css flicker fix

--- a/www/css/responsive.css
+++ b/www/css/responsive.css
@@ -48,6 +48,8 @@
        -moz-transition: all 0.1s ease-out; 
          -o-transition: all 0.1s ease-out; 
             transition: all 0.1s ease-out; 
+        -webkit-transform:translate3d(0,0,0);
+        
     }
 
     .non-touch .app:hover {
@@ -59,9 +61,9 @@
              -o-transform: scale(1.1); 
                 transform: scale(1.1);
 
-        -moz-box-shadow: 3px 3px 8px 0px #AAA;
-        -webkit-box-shadow: 3px 3px 8px 0px #AAA;
-              box-shadow: 3px 3px 8px 0px #AAA;
+        -moz-box-shadow: 3px 3px 8px 0px #333;
+        -webkit-box-shadow: 3px 3px 8px 0px #333;
+              box-shadow: 3px 3px 8px 0px #333;
               
         background-color:white;
     }
