--- a/www/css/site.css
+++ b/www/css/site.css
@@ -180,6 +180,11 @@ footer {
     display:block;
     overflow: hidden;
     border:1px solid #EEE;
+    
+    
+    -moz-box-shadow: 1px 1px 3px 0px #666;
+    -webkit-box-shadow: 1px 1px 3px 0px #666;
+          box-shadow: 1px 1px 3px 0px #666;
 }
 
 .app .logo {
